--- a/src/index.hbs
+++ b/src/index.hbs
@@ -310,6 +310,8 @@
                 <div class="gallery__content__image__overlay"></div>
                 <img src="./assets/images/y028.jpg" alt="Gallery Image">
             </div>
+        </div>
+        <div class="gallery__content">
             <div class="gallery__content__image">
                 <div class="gallery__content__image__overlay"></div>
                 <img src="./assets/images/y022.jpg" alt="Gallery Image">
@@ -344,6 +346,7 @@
             </div>
         </div>
     </div>
-    
+        {{> partials/footer }}
+
     </body>
 </html>
